--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.113.0",
     "@react-three/fiber": "^8.17.8",
+    "@vercel/analytics": "^1.4.1",
     "framer-motion": "^11.5.6",
     "maath": "^0.10.8",
     "react": "^18.3.1",
